fix bad is-box-title z-index

--- a/default-dark/assets/css/main.css
+++ b/default-dark/assets/css/main.css
@@ -466,7 +466,7 @@ input>:has(.is-box-title) {
     left: 0.5rem;
     font-size: 0.75rem;
     font-weight: bold;
-    z-index: 99;
+    z-index: 1;
     text-shadow: 
         calc(-1 * var(--stroke-width)) calc(-1 * var(--stroke-width)) 0 var(--stroke-color),  
         calc(1 * var(--stroke-width)) calc(-1 * var(--stroke-width)) 0 var(--stroke-color),
